--- a/TestTask1.DataAccess/TestTask1.DataAccess.csproj
+++ b/TestTask1.DataAccess/TestTask1.DataAccess.csproj
@@ -6,4 +6,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\TestTask1.Business\TestTask1.Business.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
+    </ItemGroup>
+
 </Project>
