--- a/TestTask1.Web/appsettings.json
+++ b/TestTask1.Web/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "Default": "Server=db,1433;Initial Catalog=master;Persist Security Info=False;User ID=SA;Password=123456a@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;" }
 }
